fix(footer): footer broken in ie11
Not sure why the flexbox footer doesn't work in IE11 so
hide it in all browsers that support flexboxtweener as well

--- a/public/stylesheets/site.less
+++ b/public/stylesheets/site.less
@@ -46,6 +46,10 @@ html.no-flexbox footer {
     display: none;
 }
 
+html.flexboxtweener footer {
+  display: none;
+}
+
 footer {
     border-top: 2px solid @linkColor;
     padding: 1.5rem;
